Complete display one character

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_map">Map</string>
     <string name="title_characters">Characters</string>
     <string name="title_dice">Dice</string>
+    <string name="title_character">Character</string>
 </resources>
