added button update character

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="icon">icon</string>
     <string name="roll_button_text">Бросить кубик</string>
     <string name="roll">Roll</string>
+    <string name="update">update</string>
 </resources>
